--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ footer{margin-top:30px; text-align:center; color:var(--muted); font-size:13px}
       <table id="keio-up">
         <thead>
           <tr>
-            <th data-key="updown">運用記号</th>
+            <th data-key="skLabel">形式</th>
             <th data-key="tr">列車番号</th>
             <th data-key="ik">行先</th>
             <th data-key="sy">種別</th>
