--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ footer{margin-top:30px; text-align:center; color:var(--muted); font-size:13px}
 <body>
 
 <header>
-  <h1>運行中列車 <small style="font-size:0.7em;color:var(--muted)">v0.1.3</small></h1>
+  <h1>v0.021 <small style="font-size:0.7em;color:var(--muted)">v0.1.3</small></h1>
   <div id="meta">
     <div id="updateTime">データ更新: —</div>
     <div id="localTime">現在時刻: —</div>
