--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>運行中列車 — v0.1.47</title>
+<title>運行中列車 — v0.2.47</title>
 <style>
 /* 基本スタイル（GitHub風・レスポンシブ） */
 :root{
@@ -231,25 +231,55 @@ window.onerror = function(message, source, lineno, colno, error) {
 //* --- 基本設定とマップ --- */
 const FEED_URL = "https://i.opentidkeio.jp/data/traffic_info.json";
 
+/* --- 完全版駅マップ（キーを文字列として定義） --- */
 const idMap = {
-  001:"京王線新宿",002:"笹塚",3:"代田橋",4:"明大前",5:"下高井戸",6:"桜上水",7:"上北沢",
-  8:"八幡山",9:"芦花公園",10:"千歳烏山",11:"仙川",12:"つつじヶ丘",13:"柴崎",14:"国領",
-  15:"布田",16:"調布",17:"西調布",18:"飛田給",19:"武蔵野台",20:"多磨霊園",21:"東府中",
-  22:"府中",23:"分倍河原",24:"中河原",25:"聖蹟桜ヶ丘",26:"百草園",27:"高幡不動",28:"南平",
-  29:"平山城址公園",30:"長沼",31:"北野",32:"京王八王子",33:"新線新宿",34:"初台",35:"幡ヶ谷",
-  36:"府中競馬正門前",37:"多摩動物公園",38:"京王片倉",39:"山田",40:"めじろ台",41:"狭間",
-  42:"高尾",43:"高尾山口",44:"京王多摩川",45:"京王稲田堤",46:"京王よみうりランド",47:"稲城",
-  48:"若葉台",49:"京王永山",50:"京王多摩センター",51:"京王堀之内",52:"南大沢",53:"多摩境",
-  54:"橋本",81:"渋谷",82:"神泉",83:"駒場東大前",84:"池ノ上",85:"下北沢",86:"新代田",87:"東松原",
-  88:"明大前",89:"永福町",90:"西永福",91:"浜田山",92:"高井戸",93:"富士見ヶ丘",94:"久我山",
-  95:"三鷹台",96:"井の頭公園",97:"吉祥寺",100:"新線新宿",101:"新宿三丁目",102:"曙橋",
-  103:"市ヶ谷",104:"九段下",105:"神保町",106:"小川町",107:"岩本町",108:"馬喰横山",
-  109:"浜町",110:"森下",111:"菊川",112:"住吉",113:"西大島",114:"大島",115:"東大島",
-  116:"船堀",117:"一之江",118:"瑞江",119:"篠崎",120:"本八幡",
-  300:"京王線新宿・都営新宿線方面",301:"都営新宿線方面",302:"京王線新宿方面",303:"調布方面",
-  304:"高幡不動方面",305:"八幡山方面",306:"笹塚方面",400:"京王八王子方面",401:"高尾山口方面",
-  402:"橋本方面",403:"府中・府中競馬正門前方面",501:"明大前・永福町方面",502:"吉祥寺方面"
+  "001":"京王線新宿","002":"笹塚","003":"代田橋","004":"明大前","005":"下高井戸","006":"桜上水","007":"上北沢",
+  "008":"八幡山","009":"芦花公園","010":"千歳烏山","011":"仙川","012":"つつじヶ丘","013":"柴崎","014":"国領",
+  "015":"布田","016":"調布","017":"西調布","018":"飛田給","019":"武蔵野台","020":"多磨霊園","021":"東府中",
+  "022":"府中","023":"分倍河原","024":"中河原","025":"聖蹟桜ヶ丘","026":"百草園","027":"高幡不動","028":"南平",
+  "029":"平山城址公園","030":"長沼","031":"北野","032":"京王八王子","033":"新線新宿","034":"初台","035":"幡ヶ谷",
+  "036":"府中競馬正門前","037":"多摩動物公園","038":"京王片倉","039":"山田","040":"めじろ台","041":"狭間",
+  "042":"高尾","043":"高尾山口","044":"京王多摩川","045":"京王稲田堤","046":"京王よみうりランド","047":"稲城",
+  "048":"若葉台","049":"京王永山","050":"京王多摩センター","051":"京王堀之内","052":"南大沢","053":"多摩境",
+  "054":"橋本",
+  "081":"渋谷","082":"神泉","083":"駒場東大前","084":"池ノ上","085":"下北沢","086":"新代田","087":"東松原",
+  "088":"明大前","089":"永福町","090":"西永福","091":"浜田山","092":"高井戸","093":"富士見ヶ丘","094":"久我山",
+  "095":"三鷹台","096":"井の頭公園","097":"吉祥寺","100":"新線新宿",
+  "101":"新宿三丁目","102":"曙橋","103":"市ヶ谷","104":"九段下","105":"神保町","106":"小川町",
+  "107":"岩.本町","108":"馬喰横山","109":"浜町","110":"森下","111":"菊川","112":"住吉","113":"西大島",
+  "114":"大島","115":"東大島","116":"船堀","117":"一之江","118":"瑞江","119":"篠崎","120":"本八幡",
+  "300":"京王線新宿・都営新宿線方面","301":"都営新宿線方面","302":"京王線新宿方面","303":"調布方面",
+  "304":"高幡不動方面","305":"八幡山方面","306":"笹塚方面","400":"京王八王子方面","401":"高尾山口方面",
+  "402":"橋本方面","403":"府中・府中競馬正門前方面","501":"明大前・永福町方面","502":"吉祥寺方面"
 };
+
+/* --- 補助関数 --- */
+
+// IDを常に3桁の文字列に変換するヘルパー
+function to3(id) {
+  return String(id).padStart(3, '0');
+}
+
+function posLabel(stId) {
+  const specialPos = {
+    "S016":"京王多摩川〜調布間 上り","S031":"京王片倉〜北野間 上り","D038":"北野〜京王片倉間 下り",
+    "S021":"東府中〜府中競馬正門前間 下り","S027":"多摩動物公園〜高幡不動間 上り",
+    "D037":"高幡不動〜多摩動物公園間 下り","D044":"調布〜京王多摩川間 下り",
+    "S002":"幡ヶ谷〜笹塚間 下り","U035":"笹塚〜幡ヶ谷間 上り"
+  };
+  if (specialPos[stId]) return specialPos[stId];
+  if (!stId || stId.length < 2) return "不明";
+
+  const kind = stId[0];
+  const n = parseInt(stId.slice(1), 10);
+  if (isNaN(n)) return "不明";
+
+  if (kind === "E") return idMap[to3(n)] || `#${n}`;
+  if (kind === "U") return `${idMap[to3(n + 1)] || n + 1}〜${idMap[to3(n)] || n}間 上り`;
+  if (kind === "D") return `${idMap[to3(n)] || n}〜${idMap[to3(n - 1)] || n - 1}間 下り`;
+  return "不明";
+}
+
 
 const syMap = {
   1:{name:"特急", cls:"tokkyu"}, 2:{name:"急行", cls:"kyuko"}, 3:{name:"快速", cls:"kaisoku"},
